<resources>
    <string name="app_name">APP_rb_aid</string>
    <string name="mobile_decision_system">Mobile Decision System</string>
    <string name="todo">TODO</string>
    <string name="rb_aid">Rb-aid</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="nama">Nama</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="todo2">TODO</string>
    <string name="rb_aid2">Rb-AID\n</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="atau">atau</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="background_collage_of_eyes">Background collage of eyes</string>
    <string name="mulai_cek_sekarang">Mulai Cek Sekarang</string>
    <string name="todo23">TODO</string>
    <string name="there_are_8_000_new_cases_of_retinoblastoma_every_year">Ada 8,000\nkasus baru\nretinoblastoma\nsetiap\ntahunnya</string>
    <string name="start_check_now2">Start check now</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="background_image_description">Gambar background mata bayi</string>
    <string name="back_button_description">Tombol kembali</string>
    <string name="main_text_content">Ada 8,000 kasus baru\nretinoblastoma\nsetiap\ntahunnya</string>
    <string name="cta_text_content">Mulai cek sekarang</string>
    <string name="instruction_text">Lalu tekan pada bagian ini untuk memulai deteksi</string>
    <string name="camera_button_description">Tombol kamera</string>
    <string name="Keluar">Keluar</string>
    <string name="info_reset_pass">*Link reset password akan dikirimkan ke alamat email, tolong cek pada folder spam</string>
    <string name="nama_aplikasi">Rb-AID\n</string>
    <string name="Mobile_Decision_System">Mobile Decision System</string>
    <string name="tombol_dokter">TEKAN SIMBOL DOKTER UNTUK LOKASI\nRUJUKAN TERDEKAT</string>
    <string name="todo3">TODO</string>
    <string name="nama_sekarang">John Doe</string>
    <string name="nama_baru">Nama Baru</string>
    <string name="ganti_nama">Ganti Nama</string>
    <string name="default_web_client_id">468474828586-6pvbr57uk3ilngrcaap2j8mhdg1m806n.apps.googleusercontent.com</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="powered_by_text">Powered by RB-AIB • © 2025 RB-AID</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="camera">"M3,16.8V9.2C3,8.08 3,7.52 3.218,7.092C3.41,6.716 3.716,6.41 4.092,6.218C4.52,6 5.08,6 6.2,6H7.255C7.378,6 7.439,6 7.496,5.994C7.792,5.96 8.057,5.796 8.22,5.546C8.251,5.498 8.278,5.443 8.333,5.333C8.443,5.113 8.498,5.003 8.561,4.908C8.886,4.409 9.417,4.081 10.009,4.013C10.122,4 10.245,4 10.491,4H13.509C13.755,4 13.878,4 13.991,4.013C14.583,4.081 15.114,4.409 15.439,4.908C15.502,5.003 15.557,5.113 15.667,5.333C15.722,5.443 15.749,5.498 15.78,5.546C15.943,5.796 16.208,5.96 16.504,5.994C16.561,6 16.622,6 16.745,6H17.8C18.92,6 19.48,6 19.908,6.218C20.284,6.41 20.59,6.716 20.782,7.092C21,7.52 21,8.08 21,9.2V16.8C21,17.92 21,18.48 20.782,18.908C20.59,19.284 20.284,19.59 19.908,19.782C19.48,20 18.92,20 17.8,20H6.2C5.08,20 4.52,20 4.092,19.782C3.716,19.59 3.41,19.284 3.218,18.908C3,18.48 3,17.92 3,16.8Z"</string>
</resources>