<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".BerandaActivity">

    <!-- Background Image (assuming it's one image) -->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo23"
        android:scaleType="centerCrop"
        android:src="@drawable/beranda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-48dp">

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/there_are_8_000_new_cases_of_retinoblastoma_every_year"
            android:textColor="@android:color/white"
            android:textSize="45sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">


        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/startCheckTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/mulai_cek_sekarang"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tutorialButton"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageButton
                android:id="@+id/setting_button"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@null"
                android:contentDescription="@null"
                android:src="@drawable/setting_icon"
                android:padding="8dp"
                android:layout_margin="5dp"/>

            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/tutorialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_orange_light"
                android:paddingVertical="7dp"
                android:paddingHorizontal="50dp"
                android:text="@string/tutorial"
                android:textSize="25sp"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_gravity="center"
            android:id="@+id/cameraButton"
            android:layout_width="275dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/transparent"
            app:strokeWidth="2sp"
            app:strokeColor="@color/white"
            app:icon="@drawable/camera"
            app:iconTint="@color/white"
            app:iconSize="40dp"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@+id/signOutTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorialButton"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/signOutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/Keluar"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>